--- a/Scripts/GenerateLocationsSQLite/package.json
+++ b/Scripts/GenerateLocationsSQLite/package.json
@@ -5,8 +5,7 @@
   "main": "main.js",
   "homepage": "https://github.com/erikmartens/nearbyweather",
   "dependencies": {
-    "bluebird": "^3.4.7",
-    "glob": "^7.1.1",
+    "fs-extra": "^1.0.0",
     "sqlite3": "^3.1.13",
     "stream-json": "^0.5.2"
   },
