--- a/Scripts/GenerateLocationsSQLite/package.json
+++ b/Scripts/GenerateLocationsSQLite/package.json
@@ -5,13 +5,15 @@
   "main": "main.js",
   "homepage": "https://github.com/erikmartens/nearbyweather",
   "dependencies": {
-    "fs-extra": "^1.0.0",
+    "fs-extra": "^5.0.0",
     "sqlite3": "^3.1.13",
-    "stream-json": "^0.5.2"
+    "stream-json": "^0.5.2",
+    "request": "^2.83.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   }
 }
